--- a/Prevu.Synoptics.V3168_Sirplaste/Pages/P997.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/Pages/P997.xaml
@@ -12,7 +12,7 @@
              x:Class="Prevu.Synoptics.P997" mc:Ignorable="d"
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
   <Canvas>
-    <Labels:Pipe Width="273" StatusComponent="888-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="338" Canvas.Top="370" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="894-21-CV1" VisibilitySignal="MAT2"/>
+    <Labels:Pipe Width="640" StatusComponent="888-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="329" Canvas.Top="370" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="895-21-CV1" VisibilitySignal="MAT1"/>
     <Labels:Pipe Width="72" Color="Air" RenderTransformOrigin="0.5,0.5" StatusComponent="970-01-MA1" Canvas.Left="1259" Canvas.Top="72" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="46" RenderTransformOrigin="0.5,0.5" StatusComponent="898-01-MA1" PipeHeight="Medium" Height="24" Canvas.Left="759" Canvas.Top="490">
       <Labels:Pipe.RenderTransform>
@@ -34,7 +34,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="168" RenderTransformOrigin="0.5,0.5" StatusComponent="888-01-MA1" PipeHeight="Medium" Height="24" Canvas.Left="254" Canvas.Top="442" VisibilityComponent="894-21-CV1" VisibilitySignal="MAT2">
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="168" RenderTransformOrigin="0.5,0.5" StatusComponent="888-01-MA1" PipeHeight="Medium" Height="24" Canvas.Left="249" Canvas.Top="442" VisibilityComponent="895-21-CV1" VisibilitySignal="MAT1">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -125,8 +125,7 @@
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
     <Labels:Pipe Width="118" StatusComponent="888-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="235" Canvas.Top="119" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilitySignal="MAT2" VisibilityComponent="894-21-CV1"/>
-    <Labels:Pipe Width="206" StatusComponent="888-01-MA1" PipeHeight="Medium" Canvas.Left="158" Canvas.Top="170" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="894-21-CV1" VisibilitySignal="MAT1"/>
-    <Labels:Pipe Width="258" StatusComponent="888-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="478" Canvas.Top="244" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="894-21-CV1" VisibilitySignal="MAT2">
+    <Labels:Pipe Width="250" StatusComponent="888-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="839" Canvas.Top="245" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="895-21-CV1" VisibilitySignal="MAT1">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -136,24 +135,13 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="147" StatusComponent="888-01-MA1" PipeHeight="Medium" Canvas.Left="464" Canvas.Top="119" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="894-21-CV1" VisibilitySignal="MAT2"/>
+    <Labels:Pipe Width="163" StatusComponent="888-01-MA1" PipeHeight="Medium" Canvas.Left="464" Canvas.Top="119" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="894-21-CV1" VisibilitySignal="MAT2"/>
     <Machines:V01_EC_FiltroManiche Canvas.Left="1318" Canvas.Top="55" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:V01_BBF_DoubleBag Canvas.Left="196" Canvas.Top="625" Height="166" Width="286" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     <Machines:V01_BBF_DoubleBag Canvas.Left="641" Canvas.Top="625" Height="166" Width="286" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_BBF_DoubleBag Canvas.Left="1082" Canvas.Top="625" Height="166" Width="286" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-    <Machines:V01_DV_DoubleBagsDiverter Canvas.Left="256" Canvas.Top="501" Height="93" Width="164" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     <Machines:V01_DV_DoubleBagsDiverter Canvas.Left="700" Canvas.Top="504" Height="94" Width="164" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_DV_DoubleBagsDiverter Canvas.Left="1142" Canvas.Top="504" Height="94" Width="164" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Machines:V01_DV_Diverter Canvas.Left="348" Canvas.Top="108" Height="81" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5">
-      <Machines:V01_DV_Diverter.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform ScaleX="-1"/>
-          <SkewTransform/>
-          <RotateTransform/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Machines:V01_DV_Diverter.RenderTransform>
-    </Machines:V01_DV_Diverter>
     <Machines:MaterialInletOutlet Canvas.Left="1215" Canvas.Top="41" HorizontalAlignment="Center" VerticalAlignment="Top" Height="67" Width="67"/>
     <Labels:JumpLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
@@ -182,16 +170,97 @@
             Height="66" Width="122" TextAlignment="Center" 
             FontSize="20" Foreground="White" Text="{lex:Loc MACHINES EXHAUST}" Canvas.Left="1116" Canvas.Top="48" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <TextBlock TextWrapping="Wrap" 
-        Height="30" Width="286" TextAlignment="Center" 
-        FontSize="20" Foreground="White" Text="{lex:Loc WHITE AND NEUTRAL}" Canvas.Left="196" Canvas.Top="798" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        Height="30" Width="430" TextAlignment="Center" 
+        FontSize="20" Foreground="White" Text="{lex:Loc White  Natural  No-Selection}" Canvas.Left="124" Canvas.Top="798" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <TextBlock TextWrapping="Wrap" 
             Height="30" Width="286" TextAlignment="Center" 
-            FontSize="20" Foreground="White" Text="{lex:Loc WHITE AND NEUTRAL}" Canvas.Left="1082" Canvas.Top="798" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+            FontSize="20" Foreground="White" Text="{lex:Loc WHITE AND NEUTRAL}" Canvas.Left="642" Canvas.Top="798" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     <TextBlock TextWrapping="Wrap" 
             Height="30" Width="286" TextAlignment="Center" 
-            FontSize="20" Foreground="White" Text="{lex:Loc COLOR}" Canvas.Left="642" Canvas.Top="798" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+            FontSize="20" Foreground="White" Text="{lex:Loc COLOR}" Canvas.Left="1082" Canvas.Top="798" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe Width="39" StatusComponent="888-01-MA1" PipeHeight="Medium" Canvas.Left="456" Canvas.Top="170" VisibilityComponent="894-21-CV1" VisibilitySignal="MAT1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe Width="56" StatusComponent="888-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="462" Canvas.Top="194" VisibilityComponent="894-21-CV1" VisibilitySignal="MAT1" HorizontalAlignment="Center" VerticalAlignment="Top">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Machines:V01_DV_Diverter Canvas.Left="348" Canvas.Top="109" Height="81" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
+      <Machines:V01_DV_Diverter.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform ScaleX="-1" ScaleY="-1"/>
+          <SkewTransform/>
+          <RotateTransform Angle="-180.124"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Machines:V01_DV_Diverter.RenderTransform>
+    </Machines:V01_DV_Diverter>
+    <Labels:DeviceLabel 
+      ComponentName="894-71-EC1" Canvas.Left="445" Canvas.Top="242" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Rectangle Height="2" Stroke="Black" Width="92" RenderTransformOrigin="0.5,0.5" Canvas.Left="421" Canvas.Top="225" HorizontalAlignment="Center" VerticalAlignment="Top">
+      <Rectangle.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="180"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Rectangle.RenderTransform>
+    </Rectangle>
+    <Machines:External Height="58" Width="60" RenderTransformOrigin="0.5,0.5" Canvas.Left="389" Canvas.Top="197" HorizontalAlignment="Center" VerticalAlignment="Top">
+      <Machines:External.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Machines:External.RenderTransform>
+    </Machines:External>
+    <Labels:Pipe Width="93" StatusComponent="888-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="876" Canvas.Top="125" VisibilityComponent="895-21-CV1" VisibilitySignal="MAT1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe Width="63" StatusComponent="870-01-MA1" PipeHeight="Medium" Canvas.Left="727" Canvas.Top="172" VisibilityComponent="895-21-CV1" VisibilitySignal="MAT2" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:DeviceLabel 
+      ComponentName="895-21-CV1" Canvas.Left="799" Canvas.Top="54" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     <Labels:JumpLabel 
-      JumpFromLabel="894-21-CV1" 
-      JumpToLabel="892-21-CV1" Canvas.Left="85" Canvas.Top="139" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+      JumpFromLabel="895-21-CV1" 
+      JumpToLabel="892-21-CV1" Canvas.Left="654" Canvas.Top="142" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:Pipe Width="167" StatusComponent="888-01-MA1" PipeHeight="Medium" Canvas.Left="623" Canvas.Top="119" VisibilityComponent="895-21-CV1" VisibilitySignal="MAT1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe Width="168" RenderTransformOrigin="0.5,0.5" StatusComponent="870-01-MA1" PipeHeight="Medium" Height="24" Canvas.Left="259" Canvas.Top="451" VisibilityComponent="895-21-CV1" VisibilitySignal="MAT2" HorizontalAlignment="Center" VerticalAlignment="Top">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Machines:V01_DV_DoubleBagsDiverter Canvas.Left="256" Canvas.Top="501" Height="93" Width="164" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+    <Labels:Pipe Width="640" StatusComponent="870-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="338" Canvas.Top="380" VisibilityComponent="895-21-CV1" VisibilitySignal="MAT2" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe Width="274" StatusComponent="870-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="836" Canvas.Top="248" VisibilityComponent="895-21-CV1" VisibilitySignal="MAT2" HorizontalAlignment="Center" VerticalAlignment="Top">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe Width="93" StatusComponent="870-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="885" Canvas.Top="116" VisibilityComponent="895-21-CV1" VisibilitySignal="MAT2" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Machines:V01_DV_Diverter Canvas.Left="782" Canvas.Top="109" Height="82" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top" Width="124">
+      <Machines:V01_DV_Diverter.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform ScaleX="-1" ScaleY="1"/>
+          <SkewTransform/>
+          <RotateTransform Angle="0"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Machines:V01_DV_Diverter.RenderTransform>
+    </Machines:V01_DV_Diverter>
   </Canvas>
 </UserControl>
