--- a/Prevu.Synoptics.V3168_Sirplaste/Pages/P920.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/Pages/P920.xaml
@@ -49,7 +49,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="146" StatusComponent="920-01-ECS4" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="1157" Canvas.Top="550" HorizontalAlignment="Center" VerticalAlignment="Top">
+    <Labels:Pipe Width="146" StatusComponent="920-01-ECS4" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="1160" Canvas.Top="550" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -59,7 +59,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="355" StatusComponent="920-01-ECS4" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="879" Canvas.Top="482" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <Labels:Pipe Width="359" StatusComponent="920-01-ECS4" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="879" Canvas.Top="482" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -330,7 +330,6 @@
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
     <Machines:V01_ScarpaTrasporto Canvas.Left="1200" Canvas.Top="691" Height="39" Width="67" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Machines:V01_VS_Airlock Canvas.Left="1198" Canvas.Top="609" Height="60" Width="64" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:V01_FKS_FlakesSorter_DoubleCH Canvas.Left="645" Canvas.Top="163" Height="280" HorizontalAlignment="Center" VerticalAlignment="Top" Width="280"/>
     <Machines:V01_VS_Airlock Canvas.Left="886" Canvas.Top="645" Height="45" Width="44" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_ScarpaTrasporto Canvas.Left="878" Canvas.Top="709" Height="34" Width="54" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
@@ -428,5 +427,29 @@
             ComponentName="920-62-LEV" Canvas.Left="804" Canvas.Top="210" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel 
             ComponentName="920-61-LEV" Canvas.Left="674" Canvas.Top="210" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe Width="72" StatusComponent="945-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1188" Canvas.Top="575" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe Width="132" RenderTransformOrigin="0.5,0.5" StatusComponent="945-01-MA1" Canvas.Left="1094" Canvas.Top="541" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="0"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Machines:V01_VS_Airlock Canvas.Left="1198" Canvas.Top="609" Height="60" Width="64" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:JumpLabel 
+      JumpFromLabel="906-01-MA1" 
+      JumpToLabel="945-01-MA1" Canvas.Left="1036" Canvas.Top="509" HorizontalAlignment="Center" VerticalAlignment="Top"/>
   </Canvas>
 </UserControl>
