V3168: Update P810, P880, P997, Overview and Plantview for new diverters system

--- a/Prevu.Synoptics.V3168_Sirplaste/PlantView.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/PlantView.xaml
@@ -74,7 +74,7 @@
         <Labels:Pipe Canvas.Left="1552" Canvas.Top="185" Width="81" PipeHeight="Medium" StatusComponent="322-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Canvas.Left="1903" Canvas.Top="309" RenderTransformOrigin="0.5,0.5" Width="67" PipeHeight="Medium" StatusComponent="350-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
 
-        <Labels:Pipe Canvas.Left="2679" Canvas.Top="303" Width="222" PipeHeight="Medium" StatusComponent="870-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="893-21-CV1" VisibilitySignal="MAT1"/>
+        <Labels:Pipe Canvas.Left="2679" Canvas.Top="306" Width="222" PipeHeight="Medium" StatusComponent="870-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="894-21-CV1" VisibilitySignal="MAT2"/>
         <Labels:Pipe Canvas.Left="2429" Canvas.Top="170" Width="244" PipeHeight="Medium" StatusComponent="534-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Canvas.Left="1154" Canvas.Top="272" Width="130" PipeHeight="Medium" StatusComponent="292-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:Pipe Canvas.Left="1190" Canvas.Top="187" Width="178" PipeHeight="Medium" StatusComponent="292-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
@@ -121,8 +121,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="2972" Canvas.Top="298" Width="151" PipeHeight="Medium" StatusComponent="942-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Canvas.Left="3064" Canvas.Top="350" Width="110" PipeHeight="Medium" StatusComponent="942-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Canvas.Left="2896" Canvas.Top="283" Width="225" PipeHeight="Medium" StatusComponent="942-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="894-21-CV1" VisibilitySignal="MAT1"/>
+        <Labels:Pipe Canvas.Left="3056" Canvas.Top="342" Width="126" PipeHeight="Medium" StatusComponent="942-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -143,8 +143,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="2679" Canvas.Top="526" Width="244" PipeHeight="Medium" StatusComponent="870-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="892-21-CV1" VisibilitySignal="MAT1"/>
-        <Labels:Pipe Canvas.Left="2566" Canvas.Top="413" Width="236" PipeHeight="Medium" StatusComponent="870-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" VisibilityComponent="892-21-CV1" VisibilitySignal="MAT1">
+        <Labels:Pipe Canvas.Left="2679" Canvas.Top="526" Width="244" PipeHeight="Medium" StatusComponent="870-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="895-21-CV1" VisibilitySignal="MAT2"/>
+        <Labels:Pipe Canvas.Left="2566" Canvas.Top="413" Width="236" PipeHeight="Medium" StatusComponent="870-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" VisibilityComponent="895-21-CV1" VisibilitySignal="MAT2">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -156,6 +156,16 @@
         </Labels:Pipe>
         <Labels:Pipe Canvas.Left="2701" Canvas.Top="262" Width="520" PipeHeight="Medium" StatusComponent="870-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="893-21-CV1" VisibilitySignal="MAT2"/>
         <Labels:Pipe Canvas.Left="572" Canvas.Top="112" Width="90" PipeHeight="Medium" StatusComponent="020-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Canvas.Left="2883" Canvas.Top="295" Width="32" PipeHeight="Medium" StatusComponent="942-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="894-21-CV1" VisibilitySignal="MAT1">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
 
         <Machines:QX_HMI Height="82" Width="74" Canvas.Left="58" Canvas.Top="615" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:QX_LongElectricalCabinet Width="188" Height="76" Canvas.Left="2150" Canvas.Top="587" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -188,7 +198,7 @@
         <Machines:V01_DCE_Centrifuge Canvas.Left="2355" Canvas.Top="164" Height="116" Width="94" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_BBF_SingleBag Canvas.Left="2883" Canvas.Top="507" Height="100" Width="100" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:QX_LongElectricalCabinet Width="188" Height="76" Canvas.Left="3210" Canvas.Top="541" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Machines:V01_FKS_FlakesSorter_DoubleCH Canvas.Left="2871" Canvas.Top="284"/>
+        <Machines:V01_FKS_FlakesSorter_DoubleCH Canvas.Left="2871" Canvas.Top="302" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_FKS_FlakesSorter_DoubleCH Canvas.Left="3187" Canvas.Top="240" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Rectangle Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="3" StrokeDashArray="2 2" Height="400"  Width="364" Canvas.Left="174" Canvas.Top="52" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
         <Rectangle Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="3" StrokeDashArray="2 2" Height="400"  Width="620" Canvas.Left="615" Canvas.Top="52" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
